[package]
name = "lignin-dom"
version = "0.0.3"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A DOM differ for lignin. Aside from diffing lignin Nodes to adjust HTML elements, it's also possible to construct Node trees from HTML elements."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/lignin-dom"
homepage = "https://github.com/Tamschi/lignin-dom/tree/v0.0.3"
documentation = "https://docs.rs/lignin-dom/0.0.3"
keywords = ["VDOM", "DOM", "diff", "two-way"]
categories = ["web-programming", "wasm"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/lignin-dom" }
is-it-maintained-open-issues = { repository = "Tamschi/lignin-dom" }
maintenance = { status = "experimental" }

[features]
log-paths = [] #TODO: Log VDOM paths in error messages, which is expensive.

[dependencies]
hashbrown = "0.9.1"
lignin = { git = "https://github.com/Tamschi/lignin.git", branch = "rework-2021-02", features = ["callbacks"] } # public
log = "0.4.8"
num-traits = "0.2.14"
wasm-bindgen = "0.2.68" # public-ish
web-sys = { version = "0.3.33", features = [
	"Attr",
	"CharacterData",
	"Comment",
	"Document",
	"HtmlElement",
	"EventTarget",
	"NamedNodeMap",
	"Node",
	"NodeList",
	"SvgElement",
	"Text",
] }

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"
