[package]
name = "lignin-dom"
version = "0.0.3"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A DOM differ for lignin. Aside from diffing lignin Nodes to adjust HTML elements, it's also possible to construct Node trees from HTML elements."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/lignin-dom"
homepage = "https://github.com/Tamschi/lignin-dom/tree/v0.0.3"
documentation = "https://docs.rs/lignin-dom/0.0.3"
keywords = ["VDOM", "DOM", "diff", "two-way"]
categories = ["web-programming", "wasm"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/lignin-dom" }
is-it-maintained-open-issues = { repository = "Tamschi/lignin-dom" }
maintenance = { status = "experimental" }

[features]
#TODO (CURRENTLY EFFECTIVELY ALWAYS ON): More detailed logging, which may contain personally identifiable information from the current or expected page content.
# Without this feature, warning and error messages are limited to less specific technical information, but higher log levels (especially `Trace`) may still leak personal data!
dangerous-logging = []

log-paths = [] #TODO: Log VDOM paths in error messages, which is expensive.

[dependencies]
hashbrown = "0.11.0"
js-sys = "0.3.48"
lignin = { git = "https://github.com/Tamschi/lignin.git", branch = "develop", features = ["callbacks"] } # public
num-traits = "0.2.14"
tracing = "0.1.25"
wasm-bindgen = "0.2.68" # public-ish
web-sys = { version = "0.3.33", features = [
	"AddEventListenerOptions",
	"Attr",
	"CharacterData",
	"Comment",
	"Document",
	"HtmlElement",
	"EventTarget",
	"NamedNodeMap",
	"Node",
	"NodeList",
	"SvgElement",
	"Text",
] }

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
tracing-wasm = "0.2.0"
version-sync = "0.9.1"
wasm-bindgen-test = "0.3.23"
web-sys = { version = "0.3.33", features = ["HtmlBodyElement", "HtmlCollection", "Window"] }
